--- a/module3-ridge-regression/LS_DS_213_assignment.ipynb
+++ b/module3-ridge-regression/LS_DS_213_assignment.ipynb
@@ -536,7 +536,7 @@
       },
       "source": [
         "target = 'SALE_PRICE'\n",
-        "high_card = ['NEIGHBORHOOD', 'BUILDING_CLASS_CATEGORY', 'TAX_CLASS_AT_PRESENT', 'EASE-MENT', 'BUILDING_CLASS_AT_PRESENT', 'ADDRESS', 'APARTMENT_NUMBER', 'BUILDING_CLASS_AT_TIME_OF_SALE', 'SALE_PRICE', 'SALE_DATE']\n",
+        "high_card = ['BUILDING_CLASS_CATEGORY', 'TAX_CLASS_AT_PRESENT', 'EASE-MENT', 'BUILDING_CLASS_AT_PRESENT', 'ADDRESS', 'APARTMENT_NUMBER', 'BUILDING_CLASS_AT_TIME_OF_SALE', 'SALE_PRICE', 'SALE_DATE', 'TAX_CLASS_AT_TIME_OF_SALE']\n",
         "features = train.columns.drop(high_card)"
       ],
       "execution_count": 0,
@@ -578,12 +578,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 343
         },
-        "outputId": "5e003a18-9b65-408c-96a8-720354031c43"
+        "outputId": "c3d3cbec-7137-4032-b111-a4750cb90c69"
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": 52,
+      "execution_count": 87,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -769,7 +769,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 52
+          "execution_count": 87
         }
       ]
     },
@@ -782,12 +782,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 297
         },
-        "outputId": "3987e71d-2e58-4f16-8ee6-e277d052b8f7"
+        "outputId": "3366e66d-d412-4b48-93fa-2bd279501f45"
       },
       "source": [
         "df.describe()"
       ],
-      "execution_count": 61,
+      "execution_count": 88,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -967,7 +967,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 61
+          "execution_count": 88
         }
       ]
     },
@@ -1018,14 +1018,14 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 241
         },
-        "outputId": "529293f8-74a0-46c1-f113-3a8f62106ee8"
+        "outputId": "3712989f-371a-4453-91e4-f89aac8d3ff8"
       },
       "source": [
         "X_train_enc.head()"
       ],
-      "execution_count": 57,
+      "execution_count": 92,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1054,6 +1054,13 @@
               "      <th>BOROUGH_2</th>\n",
               "      <th>BOROUGH_5</th>\n",
               "      <th>BOROUGH_1</th>\n",
+              "      <th>NEIGHBORHOOD_OTHER</th>\n",
+              "      <th>NEIGHBORHOOD_FLUSHING-NORTH</th>\n",
+              "      <th>NEIGHBORHOOD_EAST NEW YORK</th>\n",
+              "      <th>NEIGHBORHOOD_BEDFORD STUYVESANT</th>\n",
+              "      <th>NEIGHBORHOOD_FOREST HILLS</th>\n",
+              "      <th>NEIGHBORHOOD_BOROUGH PARK</th>\n",
+              "      <th>NEIGHBORHOOD_ASTORIA</th>\n",
               "      <th>BLOCK</th>\n",
               "      <th>LOT</th>\n",
               "      <th>ZIP_CODE</th>\n",
@@ -1063,13 +1070,19 @@
               "      <th>LAND_SQUARE_FEET</th>\n",
               "      <th>GROSS_SQUARE_FEET</th>\n",
               "      <th>YEAR_BUILT</th>\n",
-              "      <th>TAX_CLASS_AT_TIME_OF_SALE</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>44</th>\n",
               "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
@@ -1083,12 +1096,18 @@
               "      <td>6800</td>\n",
               "      <td>1325.0</td>\n",
               "      <td>1930.0</td>\n",
-              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>61</th>\n",
               "      <td>0</td>\n",
               "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
@@ -1101,13 +1120,19 @@
               "      <td>4000</td>\n",
               "      <td>2001.0</td>\n",
               "      <td>1940.0</td>\n",
-              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>78</th>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>4210</td>\n",
@@ -1119,11 +1144,17 @@
               "      <td>3500</td>\n",
               "      <td>2043.0</td>\n",
               "      <td>1925.0</td>\n",
-              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>108</th>\n",
               "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
@@ -1137,11 +1168,17 @@
               "      <td>4000</td>\n",
               "      <td>2680.0</td>\n",
               "      <td>1899.0</td>\n",
-              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>111</th>\n",
               "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
@@ -1155,27 +1192,26 @@
               "      <td>1710</td>\n",
               "      <td>1872.0</td>\n",
               "      <td>1940.0</td>\n",
-              "      <td>1</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "     BOROUGH_3  BOROUGH_4  ...  YEAR_BUILT  TAX_CLASS_AT_TIME_OF_SALE\n",
-              "44           1          0  ...      1930.0                          1\n",
-              "61           0          1  ...      1940.0                          1\n",
-              "78           0          0  ...      1925.0                          1\n",
-              "108          1          0  ...      1899.0                          1\n",
-              "111          1          0  ...      1940.0                          1\n",
+              "     BOROUGH_3  BOROUGH_4  ...  GROSS_SQUARE_FEET  YEAR_BUILT\n",
+              "44           1          0  ...             1325.0      1930.0\n",
+              "61           0          1  ...             2001.0      1940.0\n",
+              "78           0          0  ...             2043.0      1925.0\n",
+              "108          1          0  ...             2680.0      1899.0\n",
+              "111          1          0  ...             1872.0      1940.0\n",
               "\n",
-              "[5 rows x 15 columns]"
+              "[5 rows x 21 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 57
+          "execution_count": 92
         }
       ]
     },
@@ -1186,14 +1222,14 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 224
+          "height": 241
         },
-        "outputId": "2c0b6dc4-c996-441a-e743-6321c5c7628d"
+        "outputId": "8e255754-4b08-47d2-9b71-a80a202ad670"
       },
       "source": [
         "X_test_enc.head()"
       ],
-      "execution_count": 62,
+      "execution_count": 93,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1222,6 +1258,13 @@
               "      <th>BOROUGH_2</th>\n",
               "      <th>BOROUGH_5</th>\n",
               "      <th>BOROUGH_1</th>\n",
+              "      <th>NEIGHBORHOOD_OTHER</th>\n",
+              "      <th>NEIGHBORHOOD_FLUSHING-NORTH</th>\n",
+              "      <th>NEIGHBORHOOD_EAST NEW YORK</th>\n",
+              "      <th>NEIGHBORHOOD_BEDFORD STUYVESANT</th>\n",
+              "      <th>NEIGHBORHOOD_FOREST HILLS</th>\n",
+              "      <th>NEIGHBORHOOD_BOROUGH PARK</th>\n",
+              "      <th>NEIGHBORHOOD_ASTORIA</th>\n",
               "      <th>BLOCK</th>\n",
               "      <th>LOT</th>\n",
               "      <th>ZIP_CODE</th>\n",
@@ -1231,7 +1274,6 @@
               "      <th>LAND_SQUARE_FEET</th>\n",
               "      <th>GROSS_SQUARE_FEET</th>\n",
               "      <th>YEAR_BUILT</th>\n",
-              "      <th>TAX_CLASS_AT_TIME_OF_SALE</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -1240,6 +1282,13 @@
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>5913</td>\n",
@@ -1251,13 +1300,19 @@
               "      <td>5000</td>\n",
               "      <td>2272.0</td>\n",
               "      <td>1930.0</td>\n",
-              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>18239</th>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>5488</td>\n",
@@ -1269,11 +1324,17 @@
               "      <td>2500</td>\n",
               "      <td>720.0</td>\n",
               "      <td>1935.0</td>\n",
-              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>18244</th>\n",
               "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
@@ -1287,11 +1348,17 @@
               "      <td>2880</td>\n",
               "      <td>2210.0</td>\n",
               "      <td>1925.0</td>\n",
-              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>18280</th>\n",
               "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
@@ -1305,11 +1372,17 @@
               "      <td>1305</td>\n",
               "      <td>1520.0</td>\n",
               "      <td>1915.0</td>\n",
-              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>18285</th>\n",
               "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
@@ -1323,27 +1396,26 @@
               "      <td>1800</td>\n",
               "      <td>840.0</td>\n",
               "      <td>1925.0</td>\n",
-              "      <td>1</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "       BOROUGH_3  BOROUGH_4  ...  YEAR_BUILT  TAX_CLASS_AT_TIME_OF_SALE\n",
-              "18235          0          0  ...      1930.0                          1\n",
-              "18239          0          0  ...      1935.0                          1\n",
-              "18244          1          0  ...      1925.0                          1\n",
-              "18280          1          0  ...      1915.0                          1\n",
-              "18285          1          0  ...      1925.0                          1\n",
+              "       BOROUGH_3  BOROUGH_4  ...  GROSS_SQUARE_FEET  YEAR_BUILT\n",
+              "18235          0          0  ...             2272.0      1930.0\n",
+              "18239          0          0  ...              720.0      1935.0\n",
+              "18244          1          0  ...             2210.0      1925.0\n",
+              "18280          1          0  ...             1520.0      1915.0\n",
+              "18285          1          0  ...              840.0      1925.0\n",
               "\n",
-              "[5 rows x 15 columns]"
+              "[5 rows x 21 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 62
+          "execution_count": 93
         }
       ]
     },
@@ -1360,15 +1432,179 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "6MUh7ynbP570",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "326bdaec-86a9-40ce-95c6-322d8e06fcb2"
+      },
+      "source": [
+        "X_train_enc.shape"
+      ],
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2507, 21)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 94
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "beu31-49OBj0",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "from sklearn.feature_selection import SelectKBest, f_regression"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aSe31Bp7Py5S",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "selector = SelectKBest(score_func=f_regression, k=12)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3z2EHcxTQPQe",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "X_train_kbest = selector.fit_transform(X_train_enc, y_train)\n",
+        "X_test_kbest = selector.transform(X_test_enc)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yribtMhrRUjU",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "48d7ca28-e17f-4e5a-cf52-a8bd91167e0c"
+      },
+      "source": [
+        "X_train_kbest.shape"
+      ],
+      "execution_count": 99,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2507, 12)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 99
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vn2tpSBbRXBq",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "3116b43d-06d2-49c1-e79c-ce80ff546e7d"
+      },
+      "source": [
+        "mask = selector.get_support()\n",
+        "mask"
+      ],
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ True, False,  True,  True, False,  True,  True, False, False,\n",
+              "        True, False, False,  True, False,  True, False,  True,  True,\n",
+              "        True,  True, False])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 100
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KbgqnD7CR3Ch",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 102
+        },
+        "outputId": "ad7c54f1-0b05-4ca4-f107-d7d5da73a43d"
+      },
+      "source": [
+        "X_train_enc.columns[mask]"
+      ],
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['BOROUGH_3', 'BOROUGH_2', 'BOROUGH_5', 'NEIGHBORHOOD_OTHER',\n",
+              "       'NEIGHBORHOOD_FLUSHING-NORTH', 'NEIGHBORHOOD_FOREST HILLS', 'BLOCK',\n",
+              "       'ZIP_CODE', 'COMMERCIAL_UNITS', 'TOTAL_UNITS', 'LAND_SQUARE_FEET',\n",
+              "       'GROSS_SQUARE_FEET'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 101
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4zfZ2uGtRcw-",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Fit a ridge regression model with multiple features. Use the normalize=True parameter (or do feature scaling beforehand — use the scaler's fit_transform method with the train set, and the scaler's transform method with the test set)"
+      ]
     }
   ]
 }
