--- a/module3-ridge-regression/LS_DS_213_assignment.ipynb
+++ b/module3-ridge-regression/LS_DS_213_assignment.ipynb
@@ -1605,6 +1605,226 @@
       "source": [
         "# Fit a ridge regression model with multiple features. Use the normalize=True parameter (or do feature scaling beforehand — use the scaler's fit_transform method with the train set, and the scaler's transform method with the test set)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nQT25pGsSNSh",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.linear_model import Ridge"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PQE1KzBLUsyo",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "ridge = Ridge(normalize=True)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "znbpZ9nnU28B",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "88a9a3cc-5d29-4cde-b30f-596ea32f1bf4"
+      },
+      "source": [
+        "ridge.fit(X_train_kbest, y_train)"
+      ],
+      "execution_count": 127,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Ridge(alpha=1.0, copy_X=True, fit_intercept=True, max_iter=None, normalize=True,\n",
+              "      random_state=None, solver='auto', tol=0.001)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 127
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KxwcGQ4kbHNd",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "af8ef2b5-f762-468c-a84b-51016d1f3067"
+      },
+      "source": [
+        "ridge.coef_"
+      ],
+      "execution_count": 128,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 7.33770882e+04, -6.90023671e+04, -5.24165108e+04, -5.13628023e+04,\n",
+              "        8.04373018e+04,  2.31170115e+05, -7.48266176e+00,  5.11587485e+01,\n",
+              "        7.79051855e+04,  2.45177330e+04,  1.93745089e+01,  9.45502404e+01])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 128
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fGukqYcbbJ98",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b9af537e-a9f7-4619-8eac-977b6cc31c2e"
+      },
+      "source": [
+        "ridge.intercept_"
+      ],
+      "execution_count": 129,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-63284.49828553724"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 129
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "v7q6ywPUViQ8",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Get mean absolute error for the test set."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "r2PqlA-FbQG-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "X_train_kbest = X_train_enc[X_train_enc.columns[mask]]\n",
+        "X_test_kbest = X_test_enc[X_test_enc.columns[mask]]\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "W_YbSaMbYJj8",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.metrics import mean_absolute_error"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IugwEVgQaNdE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ae765eb4-d384-47de-b36a-c77379cd9f89"
+      },
+      "source": [
+        "y_pred = ridge.predict(X_train_kbest)\n",
+        "mae = mean_absolute_error(y_train, y_pred)\n",
+        "mae"
+      ],
+      "execution_count": 132,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "170634.13600454424"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 132
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zS0ZN3WAgTNj",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ed22411f-bb8c-4cab-a2a5-9608c456da0e"
+      },
+      "source": [
+        "y_pred = ridge.predict(X_test_kbest)\n",
+        "mae = mean_absolute_error(y_test, y_pred)\n",
+        "mae"
+      ],
+      "execution_count": 142,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "170519.6706633737"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 142
+        }
+      ]
     }
   ]
 }
